added QoL changes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Discord bot to create quotes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "hmr": "nodemon index.js",
+    "nodemon": "npm run hmr",
+    "start": "node index.js"
   },
   "author": "Rhydam Shrestha",
   "license": "ISC",
