--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.3.2",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
